[package]
name = "hmi-emu"
version = "0.2.0"
authors = ["Alexander Lunegov <alunegov@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
miniserde = "0.1.39"
slint = "1.6"
tokio = { version = "1.38.0", features = ["full"] }
tokio-modbus = "0.13.1"

[build-dependencies]
slint-build = "1.6"
