[package]
name = "hmi-emu"
version = "0.4.0"
authors = ["Alexander Lunegov <alunegov@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4"
miniserde = "0.1"
slint = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-modbus = "0.13"

[build-dependencies]
slint-build = "1.0"
